Fix embedded widget overflow and update version to 4.0.4 (#861)

--- a/src/app/core/components/widget-host2/widget-host2.component.scss
+++ b/src/app/core/components/widget-host2/widget-host2.component.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   display: block;
+  overflow: hidden;
 }
 
 .widget-container {
